/*
 * Licensed to the Apache Software Foundation (ASF) under one or more
 * contributor license agreements.  See the NOTICE file distributed with
 * this work for additional information regarding copyright ownership.
 * The ASF licenses this file to You under the Apache License, Version 2.0
 * (the "License"); you may not use this file except in compliance with
 * the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

option java_multiple_files = true;
package org.apache.airavata.mft.resource.stubs.dropbox.resource;

import "common/common.proto";
import "dropbox/DropboxStorage.proto";

message DropboxResource {
    string resourceId = 1;
    org.apache.airavata.mft.resource.stubs.dropbox.storage.DropboxStorage dropboxStorage = 2;
    oneof resource {
        org.apache.airavata.mft.resource.stubs.common.FileResource file = 3;
        org.apache.airavata.mft.resource.stubs.common.DirectoryResource directory = 4;
    }
}

message DropboxResourceGetRequest {
    string resourceId = 1;
}

message DropboxResourceCreateRequest {
    string storageId = 1;
    oneof resource {
        org.apache.airavata.mft.resource.stubs.common.FileResource file = 2;
        org.apache.airavata.mft.resource.stubs.common.DirectoryResource directory = 3;
    }
}

message DropboxResourceUpdateRequest {
    string resourceId = 1;
    string storageId = 2;
    oneof resource {
        org.apache.airavata.mft.resource.stubs.common.FileResource file = 3;
        org.apache.airavata.mft.resource.stubs.common.DirectoryResource directory = 4;
    }}

message DropboxResourceDeleteRequest {
    string resourceId = 1;
}